# Contrast

./: .gitignore  CMakeLists.txt  MEMORY_SOLUTIONS.md  README.md  test_lr_schedule.cpp
apps/: CMakeLists.txt  compare_memory.cpp  enumerate_3x3.cpp  enumerate_real_3x3.cpp  estimate_memory.cpp  visualize_patterns.cpp  visualize_rotations.cpp
apps/cli_play/: CMakeLists.txt  main.cpp
apps/cli_selfplay/: CMakeLists.txt  main.cpp
apps/debug_rulebased/: CMakeLists.txt  main.cpp
apps/eval_ntuple/: CMakeLists.txt  main.cpp
apps/gui_debug/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
apps/gui_play/: CMakeLists.txt  README.md  imgui_layer.cpp  imgui_layer.hpp  main.cpp  renderer.cpp  texture.cpp
apps/ntuple_designer/: CMakeLists.txt  main.cpp
apps/test_rule_based/: CMakeLists.txt  main.cpp
apps/test_rulebased/: CMakeLists.txt  main.cpp
apps/test_rulebased_analysis/: CMakeLists.txt  main.cpp
apps/train_ntuple/: CMakeLists.txt  README.md  main.cpp  train_alternating.cpp  train_parallel.cpp  train_parallel_big.cpp  train_selfplay.cpp
apps/web_server/: CMakeLists.txt  game_session.cpp  game_session.hpp  main.cpp
client/: CMakeLists.txt  main.cpp
client/kaneko/: AlphaZero.py  contrast_game.py  debug.py  logger.py  main.py  mcts.py  model.py  play_vs_ai.py  pyproject.toml  test_mcts_value.py
core/include/contrast/: precomputed_move_table.hpp
core/src/: rules.cpp
docs/: BOARD_ENCODING.md  GUI_USAGE.md  ntuple_patterns.md
engine/: CMakeLists.txt
engine/include/contrast_ai/: alphabeta.hpp  mcts.hpp  ntuple.hpp  ntuple_big.hpp  rule_based_policy2.hpp
engine/src/: alphabeta.cpp  mcts.cpp  ntuple.cpp  ntuple_big.cpp  random_policy.cpp  rule_based_policy.cpp  rule_based_policy2.cpp
scripts/: continue_selfplay.sh  debug_gui.sh  demo_ai.sh  evaluate_ai.sh  generate_move_table.py  play_vs_ai.sh  run_benchmark.sh  run_selfplay.sh  train_selfplay.sh
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_ai.cpp  test_game_state.cpp  test_movegen.cpp  test_ntuple.cpp  test_rules.cpp  test_symmetry.cpp
web/: index.html
