add_subdirectory(cli_selfplay)
add_subdirectory(cli_play)
add_subdirectory(gui_debug)
add_subdirectory(gui_play)
add_subdirectory(train_ntuple)
add_subdirectory(eval_ntuple)
add_subdirectory(test_rule_based)
add_subdirectory(test_rulebased)
add_subdirectory(debug_rulebased)
add_subdirectory(ntuple_designer)
add_subdirectory(web_server)
